按最新构架整理

--- a/tools/apitable_api.yaml
+++ b/tools/apitable_api.yaml
@@ -83,3 +83,7 @@ parameters:
     help:
       en_US: The endpoint path after the base URL (e.g., /spaces/{spaceId}/nodes).
       zh_Hans: 基地址之后的端点路径 (例如 /spaces/{spaceId}/nodes)。
+
+extra:
+  python:
+    source: tools/apitable_api.py
