--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,8 +1,34 @@
 version: 0.0.1
-type: tool
+type: plugin
 author: dify
-name: apitable
+label:
+  en_US: APITable
+  zh_Hans: APITable
 description:
   en_US: APITable integrations for Dify.
   zh_Hans: Dify 的 APITable 插件。
 icon: icon.svg
+created_at: 2024-02-28T00:00:00Z
+
+# Resources and permissions
+resource:
+  memory: 268435456
+  permission:
+    tool:
+      enabled: true
+
+# Extensions definition
+plugins:
+  tools:
+    - provider/apitable.yaml
+
+# Runtime metadata
+meta:
+  version: 0.0.1
+  arch:
+    - amd64
+    - arm64
+  runner:
+    language: python
+    version: "3.11"
+    entrypoint: main
